remove old start/end emotion from api data model, fix emotions dropdown z-index

--- a/src/index.scss
+++ b/src/index.scss
@@ -225,5 +225,5 @@ option[value=""][disabled] {
 }
 
 .genres-multi-select {
-    z-index: 999;
+    z-index: 9999;
 }
